WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160699
[WK2] Only send gamepad input events to the currently focused page
https://bugs.webkit.org/show_bug.cgi?id=160699
Summary
[WK2] Only send gamepad input events to the currently focused page
Brady Eidson
Reported
2016-08-09 11:19:29 PDT
[WK2] Only send gamepad input events to the currently focused page
Attachments
Patch v1
(17.02 KB, patch)
2016-08-09 16:34 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Attempt to fix 32bit build
(16.86 KB, patch)
2016-08-09 16:57 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Another 32bit build fix attempt
(16.83 KB, patch)
2016-08-09 17:08 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Yay much better
(15.66 KB, patch)
2016-08-09 17:19 PDT
,
Brady Eidson
thorton
: review+
Details
Formatted Diff
Diff
Now with more building, and for landing.
(15.68 KB, patch)
2016-08-09 17:26 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-08-09 16:34:03 PDT
Created
attachment 285688
[details]
Patch v1
Brady Eidson
Comment 2
2016-08-09 16:57:54 PDT
Created
attachment 285692
[details]
Attempt to fix 32bit build
Tim Horton
Comment 3
2016-08-09 17:04:28 PDT
Comment on
attachment 285692
[details]
Attempt to fix 32bit build View in context:
https://bugs.webkit.org/attachment.cgi?id=285692&action=review
> Source/WebKit2/UIProcess/Gamepad/mac/UIGamepadProviderMac.mm:41 > + if ([responder class] == [WKWebView class])
This is very wrong, you want [responder isKindOfClass:[WKWebView class]] (and below). Otherwise subclasses will fail.
Tim Horton
Comment 4
2016-08-09 17:06:05 PDT
Comment on
attachment 285692
[details]
Attempt to fix 32bit build View in context:
https://bugs.webkit.org/attachment.cgi?id=285692&action=review
> Source/WebKit2/UIProcess/API/mac/WKView.mm:873 > +- (WebPageProxy*) _webPageProxy
instead of adding this, can't you toImpl(webView.pageRef) or something like that?
Brady Eidson
Comment 5
2016-08-09 17:08:53 PDT
Created
attachment 285694
[details]
Another 32bit build fix attempt
Brady Eidson
Comment 6
2016-08-09 17:14:07 PDT
(In reply to
comment #3
)
> Comment on
attachment 285692
[details]
> Attempt to fix 32bit build > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=285692&action=review
> > > Source/WebKit2/UIProcess/Gamepad/mac/UIGamepadProviderMac.mm:41 > > + if ([responder class] == [WKWebView class]) > > This is very wrong, you want [responder isKindOfClass:[WKWebView class]] > (and below). Otherwise subclasses will fail.
Right. (In reply to
comment #4
)
> Comment on
attachment 285692
[details]
> Attempt to fix 32bit build > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=285692&action=review
> > > Source/WebKit2/UIProcess/API/mac/WKView.mm:873 > > +- (WebPageProxy*) _webPageProxy > > instead of adding this, can't you toImpl(webView.pageRef) or something like > that?
Oooooh toImpl... okay.
Brady Eidson
Comment 7
2016-08-09 17:19:56 PDT
Created
attachment 285696
[details]
Yay much better
Brady Eidson
Comment 8
2016-08-09 17:26:57 PDT
Created
attachment 285698
[details]
Now with more building, and for landing.
WebKit Commit Bot
Comment 9
2016-08-09 17:27:51 PDT
Attachment 285698
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Gamepad/mac/UIGamepadProviderMac.mm:31: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 10
2016-08-09 17:51:02 PDT
Comment on
attachment 285698
[details]
Now with more building, and for landing. Clearing flags on attachment: 285698 Committed
r204318
: <
http://trac.webkit.org/changeset/204318
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug